--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -38,11 +38,13 @@
       color: aquamarine;
       text-transform: none;
       font-weight: bold;
+      font-family: 'Poppins';
   }
 .menuppal ul li a{
     text-decoration: none;
     color: aquamarine;
     background-color: black;
+    font-family: 'Poppins';
   }
 
 .menuppal li:hover {
@@ -51,8 +53,8 @@
 }
 .menuppal a:hover {
     color: aqua;
+    font-family: 'Poppins';
 }
-
 .svgcarrito {
     height: 20%; 
     width: 20%;
@@ -64,8 +66,112 @@
     justify-content: space-between;
     color: aquamarine;
     text-decoration: aquamarine underline overline;
+    cursor: pointer;
+    font-family: 'Poppins';
 }  
 .svgcarrito:hover {
     transition: all 1s;
-    transform: scale(1.5,1.5);
+    transform: scale(1.1,1.1);
+    cursor: pointer;
+}
+.featuredProd {
+    padding: 0.5rem 0;
+    font-family: 'Poppins';
+  }
+  
+.featuredProd h2 {
+    color: aquamarine;
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 2.5rem;
+    font-family: 'Poppins';
+    text-shadow: 3px, 3px, 3px, black;
+  }
+  
+.featuredProd ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: 'Poppins';
+  } 
+.featuredProd ul li {
+    width: 70%;
+    height: 70%;
+    padding: 5px;
+    font-family: 'Poppins';
+  } 
+.cargando {
+    text-align: center;
+    font-size: 3rem;
+  }
+.prodDesayuno {
+    background: black;
+    border-radius: 1.5rem;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: box-shadow 0.5s;
+    font-family: 'Poppins';
+}
+
+.prodDesayuno:hover {
+  box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.25);
+}
+
+.prodDesayuno img {
+  width: 100%;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+
+.prodDesayuno div {
+  padding: 1rem;
+  text-align: center;
+  font-family: 'Poppins';
+  color: aquamarine;
+}
+
+.prodDesayuno div h3 {
+  color: var(--text);
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  font-family: 'Poppins';
+}
+
+.prodDesayuno div p {
+  color: var(--text);
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.prodDesayuno div .qty {
+  width: 100%;
+  margin: 1rem 0;
+  display: flex;
+}
+
+.prodDesayuno div .qty button {
+  width: 20%;
+  border: none;
+  padding: 0.5rem;
+  outline: none;
+  cursor: pointer;
+  background: var(--color-principal);
+  border-radius: 1rem;
+  color: var(--blanco);
+  font-size: 1rem;
+}
+
+.prodDesayuno div .qty button:disabled {
+  background: #ddd;
+  cursor: no-drop;
+}
+
+.prodDesayuno div .qty input {
+  width: 60%;
+  text-align: center;
+  border: none;
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 1.8rem;
+  outline: none;
 }
